--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -390,7 +390,7 @@ fieldset {
 
 /*
  * 1. Corrects color not being inherited in IE6/7/8/9
- * 2. Corrects text not wrapping in FF3 
+ * 2. Corrects text not wrapping in FF3
  * 3. Corrects alignment displayed oddly in IE6/7
  */
 legend {
@@ -753,14 +753,14 @@ dt {
   text-align: center;
 }
 #header nav li a:hover {
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #749619), color-stop(100%, #527f0e));
-  background: -webkit-linear-gradient(#749619, #527f0e);
-  background: -moz-linear-gradient(#749619, #527f0e);
-  background: -o-linear-gradient(#749619, #527f0e);
-  background: -ms-linear-gradient(#749619, #527f0e);
-  background: linear-gradient(#749619, #527f0e);
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #B27300), color-stop(100%, #FFA500));
+  background: -webkit-linear-gradient(#B27300, #FFA500);
+  background: -moz-linear-gradient(#B27300, #FFA500);
+  background: -o-linear-gradient(#B27300, #FFA500);
+  background: -ms-linear-gradient(#B27300, #FFA500);
+  background: linear-gradient(#B27300, #FFA500);
   background-color: #659e10;
-  border: 1px solid #527f0e;
+  border: 1px solid #FFA500;
   -moz-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
   -webkit-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
   -o-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
