--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -850,8 +850,8 @@ section #title .credits.right {
   }
 }
 
-.center {
-    margin: 0;
-    position: absolute;
-    left: 50%;
+.img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
